packages/components/src/styles/db-ui-components.scss
@use "@db-ui/foundations/build/scss/db-ui-foundations" as *;

@use "../components/button/button" as *;
@use "../components/icon/icon" as *;
@use "../components/tab/tab" as *;
@use "../components/tab-bar/tab-bar" as *;
@use "../components/divider/divider" as *;
@use "../components/card/card" as *;
@use "../components/input/input" as *;
@use "../components/brand/brand" as *;
@use "../components/header/header" as *;
@use "../components/page/page" as *;
@use "../components/link/link" as *;
@use "../components/section/section" as *;
@use "../components/infotext/infotext" as *;
@use "../components/alert/alert" as *;
@use "../components/radio/radio" as *;
@use "../components/code-docs/code-docs" as *;

// angular-workaround
dbalert,
dbcodedocs,
dbbrand,
dbbutton,
dbcard,
dbdivider,
dbdrawer,
dbheader,
dbicon,
dbinfotext,
dbinput,
dblink,
dbpage,
dbsection,
dbtab,
dbtabbar {
	display: contents;
}

